@@ -1,3 +1,8 @@
+2011-04-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* config/Makefile.am.in (Makefile.am): Additional files to become
+	part of the distributed tarball.  Reindented.
+
 2011-04-19  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c (f_columnhead df_set_key_title) src/datafile.h
@@ -6,7 +11,7 @@
 	New function columnhead(N) that returns a string containing column N
 	from the first line of a data set. 'plot ... title columnhead(i)'
 	was already implemented as a keyword; making it a function instead
-	allows, for example, 
+	allows, for example,
 	'plot for [i=3:6] ... title "Results of ".columnhead(i)'
 
 2011-04-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
